# Bit-Chess

./: README.md  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
Tests/: TestAttackGeneration.py  TestBoard.py  TestMoveGeneration.py  TestPERFT.py  TestRotations.py
src/: main.py
src/BitChess/: Board.py  MoveGeneration.py  Perft.py  PrecomputedAttacks.py
src/Core/: AttackGeneration.py  BitboardUtility.py  Board.py  GameState.py  Move.py  MoveGeneration.py  Piece.py  PieceList.py  PrecomputedAttacks.py
src/Tests/: TestAttackGeneration.py  TestBB.py  TestBoard.py  TestMoveGeneration.py  TestRotations.py
src/bit_chess_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
