[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-chess-python"
authors = [{name = "Andrew Yin", email = "andrewyingo@gmail.com"}]
description = "Bitboard Chess implementation written entirely in Python"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/andrewy1n/Bit-Chess"
Repository = "https://github.com/andrewy1n/Bit-Chess"
Changelog = "https://github.com/andrewy1n/Bit-Chess/releases"
Documentation = "https://github.com/andrewy1n/Bit-Chess/blob/main/README.md"
